--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
