--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@tinymce/tinymce-angular": "^4.2.0",
     "bootstrap": "^4.5.3",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
