--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tinymce/tinymce-angular": "^4.2.0",
     "bootstrap": "^4.5.3",
     "ngx-toastr": "^13.2.0",
+    "ngx-webstorage": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
