--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod",
+  },
+  "engines": {
+    "npm": "6.14.8",
+    "node": "10.16.0"
   },
   "private": true,
   "dependencies": {
@@ -24,8 +29,10 @@
     "@angular/router": "~11.0.0",
     "@tinymce/tinymce-angular": "^4.2.0",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
     "ngx-toastr": "^13.2.0",
     "ngx-webstorage": "^6.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
