--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/cdk": "^11.0.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
+    "@angular/cli": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/http": "^7.2.16",
